# digital_library

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Makefile.win  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  презентация.key
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 1dd5379045bd_f.py  236545ae02f1_fix.py  245243f56ebe_insert_category_data.py  267c9ec2ac68_update_author_genre_fk_constraint.py  30f3229dabd2_add_user_and_role_tables.py  51915c6a9eca_insert_role_and_user_data.py  53aaee1fe7fa_update_author_genre_relations.py  5b2ac9f1250b_update_author_genre_fk_constraint.py  5c2657722b1b_add_category_id_to_book.py  603068b5c749_initial_migration.py  646ac822db8c_add_category_table.py  65d15f7e1ed7_author_book_table.py  767620508449_author_book_table_and_some_fixes.py  843cc651aad2_initial_migration.py  8adb3d5e111e_insert_role_and_user_data.py  b6ded31952b7_removed_id_from_favorites.py  b8b5ae364fe3_author_book_table_and_some_fixes.py  bbe08b0a2e37_initial_migration.py  c0308a91f39c_drop_unique_constraint_in_author.py  c1cf3c4496b1_added_favorites_base_fields.py  c912e2fca348_insert_genres.py  da14d399f331_init_migration.py  da1fd554990d_add_user_and_role_tables.py  da28606709ae_insert_genre_data.py  db2e9d067dd5_add_review_table.py  e35b81215d6e_insert_genre_data.py  ed93f32f1e83_add_review_table.py  ef1914cfe917_add_favotires_and_book_tables.py  f265772dd520_add_reading_status_table.py  f2a1d8c9e3b5_add_description_to_book.py  fb90f8f0e96a_initial_migration.py
api/: routers.py
docs/: README.md
reports/: alina_lukianova.md  denis_eremenko.md  egor_kalugin.md  igor_barbashov.md
src/: main.py  setting.py
src/api/: dependencies.py  routers.py  test_router.py
src/api/v1/: author.py  init.py  root.py
src/auth/: api.py  guards.py  schema.py  utils.py
src/constants/: order_direction.py  pagination.py  reading_status.py
src/db/: db.py
src/domains/author/: api.py  constants.py  entity.py  models.py  protocols.py  repository.py  schema.py  services.py
src/domains/book/: api.py  constants.py  models.py  repository.py  schema.py
src/domains/category/: api.py  models.py  schema.py
src/domains/common/: models.py  schema.py
src/domains/favorites/: api.py  models.py  repository.py  schema.py
src/domains/genre/: api.py  entity.py  models.py  schema.py
src/domains/reading_status/: __init__.py  api.py  models.py  schema.py
src/domains/review/: api.py  models.py  schema.py
src/domains/role/: models.py  repository.py  schema.py
src/domains/user/: api.py  constants.py  models.py  repository.py  schema.py
src/entities/author/: api.py  domain_services.py  models.py  repository.py  schema.py  services.py
src/entities/genre/: models.py  schema.py
src/exceptions/: auth.py  entity.py  init.py
src/models/: __init__.py  author.py  base.py  genre.py
src/repositories/: author.py  author_interfaces.py
src/schemas/: author.py  base.py  genre.py
src/services/: author.py
src/utils/: request_builder.py  unitofwork.py
tests/: config.py  conftest.py  test_category.py  test_favorites.py  test_main.py  test_review.py
tests/category/: conftest.py  test_category.py
tests/favorites/: conftest.py  test_favorites.py
tests/genre/: conftest.py  test_genre.py
tests/review/: conftest.py  test_review.py
tests/role/: conftest.py
tests/user/: conftest.py
(+4 files in other folders)
