[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "MIPT project"
authors = [
  "Kalugin Egor <kalugin.ei@phystech.edu>",
  "Konovalov Denis <where.adm@gmail.com>",
  "Barbashov Igor <barbashov.is@phystech.edu>",
  "Lukianova ALina <alinaselkova@gmail.com>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.14"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"
pydantic = "^2.12.3"
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.27"
alembic = "^1.17.1"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.1.0"
pyright = "^1.1.407"
ruff = "^0.14.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
