[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "MIPT project"
authors = [
  "Kalugin Egor <kalugin.ei@phystech.edu>",
  "Konovalov Denis <where.adm@gmail.com>",
  "Barbashov Igor <barbashov.is@phystech.edu>",
  "Lukianova ALina <alinaselkova@gmail.com>",
  "Eremenko Denis <eremenko.ds@phystech.edu>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.14"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"
pydantic = "^2.12.3"
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
alembic = "^1.17.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.1.0"
pyright = "^1.1.407"
ruff = "^0.14.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "alembic",
]
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.14"

[tool.ruff]
extend-exclude = ["alembic"]

[flake8]
max-line-length = 120