[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "MIPT project"
authors = [
  "Kalugin Egor <kalugin.ei@phystech.edu>",
  "Konovalov Denis <where.adm@gmail.com>",
  "Barbashov Igor <barbashov.is@phystech.edu>",
  "Lukianova ALina <alinaselkova@gmail.com>",
  "Eremenko Denis <eremenko.ds@phystech.edu>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.11.0"
alembic = "^1.17.1"
asyncpg = "^0.31.0"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^1.3.0"
pyright = "^1.1.407"
ruff = "^0.14.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "alembic",
]
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.14"

[tool.ruff]
extend-exclude = ["alembic"]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # FASTAPI
    "FAST",
]

